Fix horizontal scroll.

--- a/src/css/themes/_themes.custom.scss
+++ b/src/css/themes/_themes.custom.scss
@@ -544,3 +544,7 @@ header li a {
     left: initial;
   }
 }
+
+.main {
+  overflow-x: hidden;
+}
